--- a/404.html
+++ b/404.html
@@ -9,5 +9,8 @@ permalink: /404.html
 <div style="text-align:center;">
     <h1>404</h1>
     <h1>PAGE NOT FOUND</h1>
+    <span style=" font: italic bold 1.5em/1em Georgia, serif ;">
+    Oops! It looks like you're lost..
+    </span>
     <img src="/assets/images/404.jpg" alt="404 not found image"/>
 </div>
