--- a/404.html
+++ b/404.html
@@ -8,9 +8,9 @@ permalink: /404.html
 
 
 <div style="text-align:center;">
-    <h1 style=" font: italic bold 3em/1em Georgia, serif ; color: gray;">
+    <span style=" font: italic bold 3em/1em Georgia, serif ; color: gray;">
     404
-    </h1>
+    </span>
     <h1>PAGE NOT FOUND</h1>
     <span style=" font: italic bold 1.5em/1em Georgia, serif ;">
     Oops! It looks like you're lost..  
