--- a/404.html
+++ b/404.html
@@ -8,11 +8,13 @@ permalink: /404.html
 
 
 <div style="text-align:center;">
-    <span style=" font: italic bold 3em/1em Georgia, serif ; color: gray;">
+    <span style=" font: italic bold 4em/1em Georgia, serif ; color: gray;">
     404
     </span>
-    <h1>PAGE NOT FOUND</h1>
-    <span style=" font: italic bold 1.5em/1em Georgia, serif ;">
+    <span style=" font: italic bold 3em/1em Georgia, serif ; color: black;">
+    PAGE NOT FOUND
+    </span>
+    <span style=" font: italic bold 1em/1em Georgia, serif ;">
     Oops! It looks like you're lost..  
     </span>
     <img src="/assets/images/404.jpg" alt="404 not found image"/>
