--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@ permalink: /404.html
 <div style="text-align:center;">
     <span style=" font: italic bold 4em/1em Georgia, serif ; color: gray;">404</span>
     <br>
-    <span style=" font: normal bold 2em/1em Georgia, serif ; color: gray;"> </span>
+    <span style=" font: italic bold 3em/1em Georgia, serif ; color: gray;"> </span>
     
     <span style=" font: normal bold 2em/1em Georgia, serif ; color: black;">PAGE NOT FOUND</span>
     <br>
