--- a/404.html
+++ b/404.html
@@ -21,4 +21,10 @@ permalink: /404.html
     <span style=" font: normal bold 1em/1em Georgia, serif ;">  </span>
     
     <img src="/assets/images/404.jpg" alt="404 not found image"/>
+    <button onclick="goBack()">앞쪽 페이지로</button>
+    <script>
+        function goBack() {
+        window.history.back();
+        }
+    </script>
 </div>
