update about me

--- a/index.html
+++ b/index.html
@@ -72,15 +72,14 @@
                     <h2 class="heading">About Me</h2>
                 </div>
                 <div class="col-md-8">
-                    <p>
-                        노력하는 개발자
-                        어릴때 부터 컴퓨터와 수학을 좋아했습니다. 컴퓨터공학부에 들어오면서
-                        수학과 비슷한 알고리즘의 매력에 빠져들어 3년동안 알고리즘 동아리 ALPS에서
-                        알고리즘 문제풀이에 관해서 깊이 배웠고 2년동안 운영체제연구실에서 오픈스택과
-                        가상화 네트워크 성능에 관한 개발과 연구를 진행하였습니다. 대외 활동으로는
-                        웹 동아리인 멋쟁이사자처럼과 4주간의 디자인씽킹 캠프와 워크숍을 통해
-                        좋은 기획의 단계와 습관을 배웠습니다.
-                    </p>
+
+                    <h4>노력하는 개발자</h4>
+                    <p>어릴때 부터 컴퓨터와 수학을 좋아했습니다. 컴퓨터공학부에 들어오면서</p>
+                    <p>수학과 비슷한 알고리즘의 매력에 빠져들어 3년동안 알고리즘 동아리 ALPS에서</p>
+                    <p>알고리즘 문제풀이에 관해서 깊이 배웠고 2년동안 운영체제연구실에서 오픈스택과</p>
+                    <p>가상화 네트워크 성능에 관한 개발과 연구를 진행하였습니다. 대외 활동으로는</p>
+                    <p>웹 동아리인 멋쟁이사자처럼과 4주간의 디자인씽킹 캠프와 워크숍을 통해</p>
+                    <p> 좋은 기획의 단계와 습관을 배웠습니다. </p>
                 </div>
             </div>
         </div>
