--- a/index.html
+++ b/index.html
@@ -89,9 +89,20 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+            <div data-date="September 2016 – June 2019">
+                <h3>ALPS</h3>
+                <h4>mentor & mentee</h4>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur
+                    in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec
+                    nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur
+                    libero. Morbi dapibus porta quam laoreet placerat.
+                </p>
+            </div>
+
+            <div data-date="July 2018 – Feburary 2020">
+                <h3>OPERATING SYSTEMS LABORATORY</h3>
+                <h4>Student(undergraduate course)</h4>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur
                     in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec
@@ -101,19 +112,8 @@
             </div>
 
             <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur
-                    in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec
-                    nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur
-                    libero. Morbi dapibus porta quam laoreet placerat.
-                </p>
-            </div>
-
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+                <h3>Like Lion</h3>
+                <h4>mentee</h4>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur
                     in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec
@@ -128,22 +128,15 @@
     <div id="education">
         <h2 class="heading">Education</h2>
         <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
+            <h3>Gwang Deok High School</h3>
+            <span class="education-date">Mar 2013 - Feb 2016</span>
+            <h4>Natural Sciences</h4>
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in
                 iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla
                 commodo malesuada sit amet vel lacus. Fusce eget efficitur libero.
                 Morbi dapibus porta quam laoreet placerat.
             </p>
-        </div>
-        <!-- End .education-block -->
-
-        <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
             <ul>
                 <li>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -151,8 +144,50 @@
                 <li>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                 </li>
+            </ul>
+        </div>
+        <!-- End .education-block -->
+
+        <div class="education-block">
+            <h3>Jeonbuk National University</h3>
+            <span class="education-date">Mar 2016 - Feb 2020</span>
+            <h4>Bachelor of Science in Computer Science</h4>
+            <ul>
                 <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    전북대학교 프로그래밍 경진대회(동상)-2017.05.20(전북대 공과대학장)
+                </li>
+                <li>
+                    전북대학교 ACM ICPC(은상)-2018.10.25(전북대 공과대학장)
+                </li>
+                <li>
+                    에듀테크#??(특별상)-()
+                </li>
+                <li>
+                    스마트디바이스#??(특별상)-()
+                </li>
+                <li>
+                    전북대학교 ACM ICPC(금상)-2019.10.22(전북대 공과대학장)
+                </li>
+                <li>
+                    지역사회와 함께하는 대학생 창조 PT 경진대회(금상)-2019.11.22(전북창조경제혁신센터장)
+                </li>
+                <li>
+                    Design Thinking을 활용한 지역 혁신 프로젝트 경진대회 본선(최우수상)-2019.11.29(전북대 공과대학장)
+                </li>
+                <li>
+                    컴퓨터공학부 작품경진대회(금상)-2019.11.29(전북대 공과대학 컴퓨터공학장)
+                </li>
+                <li>
+                    컴퓨터공학부 게임경진대회(은상)-2019.12.6(전북대 공과대학 컴퓨터공학장)
+                </li>
+                <li>
+                    전북대 캡스톤디자인 UCC 공모전(은상)-2019.12.24(전북대 LINC+사업단장)
+                </li>
+                <li>
+                    JBNU 산학협력페스티벌 캡스톤디자인 경진대회(은상)-2019.12.24(전북대 LINC+사업단장)
+                </li>
+                <li>
+                    Design Thikning 최종발표(창조디자인상)-2020.02.21(전북대 공과대학장)
                 </li>
             </ul>
         </div>
