--- a/index.html
+++ b/index.html
@@ -160,10 +160,10 @@
                     전북대학교 ACM ICPC(은상)-2018.10.25(전북대 공과대학장)
                 </li>
                 <li>
-                    에듀테크#??(특별상)-()
+                    제2회 한국 메이커&코딩 경진대회(입선상)-2019.08.25(한국에듀테크산업협회장)
                 </li>
                 <li>
-                    스마트디바이스#??(특별상)-()
+                    2019 호남권 스마트디바이스톤대회(특별상)-2019.09.28(전남대학교 LINC+사업단장)
                 </li>
                 <li>
                     전북대학교 ACM ICPC(금상)-2019.10.22(전북대 공과대학장)
