--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 
     <div id="lead">
         <div id="lead-content">
+            <img src="/images/bio-photo2.jpg" alt="bio image" />
             <h1>JuYong Seong</h1>
             <h2>Software Engineer</h2>
             <a href="#" class="btn-rounded-white">Download Resume</a>
@@ -93,10 +94,7 @@
                 <h3>ALPS</h3>
                 <h4>mentor & mentee</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur
-                    in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec
-                    nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur
-                    libero. Morbi dapibus porta quam laoreet placerat.
+                    알고리즘 문제풀이에
                 </p>
             </div>
 
@@ -295,7 +293,7 @@
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; 2017 YOUR NAME
+                        Copyright &copy; 2020 JuYong Seong
                     </p>
                 </div>
                 <div class="col-sm-2 top">
