--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     <div id="lead">
         <div id="lead-content">
             <img src="/images/bio-photo2.jpg" alt="bio image" />
+            <img src="images/bio-photo2.jpg" />
             <h1>JuYong Seong</h1>
             <h2>Software Engineer</h2>
             <a href="#" class="btn-rounded-white">Download Resume</a>
