--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
 
     <div id="lead">
         <div id="lead-content">
-            <img src="/images/bio-photo2.jpg" alt="bio image" />
-            <img src="images/bio-photo2.jpg" />
+            <img src="/images/bio-photo2.jpg" alt="bio image" style="max-width: 30%; height: auto;"/>
             <h1>JuYong Seong</h1>
             <h2>Software Engineer</h2>
             <a href="#" class="btn-rounded-white">Download Resume</a>
