--- a/index.html
+++ b/index.html
@@ -48,7 +48,22 @@
 
     <div id="lead">
         <div id="lead-content">
-            <img src="/images/bio-photo2.jpg" alt="bio image" style="max-width: 30%; height: auto;"/>
+            .box {
+                 width: 150px;
+                 height: 150px; 
+                 border-radius: 30%;
+                 overflow: hidden;
+            }
+            .profile {
+                 width: 100%;
+                 height: 100%;
+                 object-fit: cover;
+            }
+            <div class="box" style="background: #BDBDBD;">
+                  <img class="profile" img src="/images/bio-photo2.jpg" alt="bio image" style="max-width: 30%; height: auto;" >
+            </div>
+     
+            <br>
             <h1>JuYong Seong</h1>
             <h2>Software Engineer</h2>
             <a href="#" class="btn-rounded-white">Download Resume</a>
