--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@
                 <h3>ALPS</h3>
                 <h4>mentor & mentee</h4>
                 <p>
-                    알고리즘 문제풀이에
+                    자료구조와 알고리즘 및 풀이 전략에 관하여 공부하며 국제대회인 ACM-ICPC를 준비하였습니다. 
+백준저지사이트와 Codeforces를 기반으로 학습하며 서로의 풀이방법을 공유하고 발표하며 알고리즘 문제풀이의 다양성을 배웠습니다. 
                 </p>
             </div>
 
