--- a/index.html
+++ b/index.html
@@ -107,12 +107,12 @@
                 <h3>OPERATING SYSTEMS LABORATORY</h3>
                 <h4>Student(undergraduate course)</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur
-                    in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec
-                    nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur
-                    libero. Morbi dapibus porta quam laoreet placerat.
+                  운영체제와 클라우드에 관하여 학습을 하였습니다. 연구로는 리눅스 가상머신과  Cloud Computing에 쓰이는 Network Virtualization를 연구 했으며, vHost의 polling 주기에 따른 네트워크 성능 향상을 주제로 논문을 2저자로 참여했습니다.
+또한 Jdevops팀에 속하여 Openstack기반의 교내 클라우드(jclould)를 개발 및 운영을 하였습니다. 
+
                 </p>
-            </div>
+                 <a href="http://oslab.jbnu.ac.kr/">Operating System Laboratory</a>
+            </div> 
 
             <div data-date="September 2015 – September 2016">
                 <h3>Like Lion</h3>
