--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 또한 Jdevops팀에 속하여 Openstack기반의 교내 클라우드(jclould)를 개발 및 운영을 하였습니다. 
 
                 </p>
-                 <a href="http://oslab.jbnu.ac.kr/">Operating System Laboratory</a>
+                 <a href="http://oslab.jbnu.ac.kr/">Operating Systems Laboratory</a>
             </div> 
 
             <div data-date="September 2015 – September 2016">
