--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
                     <h4>노력하는 개발자</h4>
                     <p> 안녕하세요. 노력하는 개발자 성주용입니다.
-어릴때 부터 수학자체의 아름다움과 재미를 느끼며 순수수학과 많은 시간을 보냈습니다.
+어릴때 부터 수학자체에 재미를 느끼며 순수수학과 많은 시간을 보냈습니다.
 대학에 진학하며 수학과 비슷한 알고리즘의 매력에 빠져들어 알고리즘 문제풀이에 집중하였고 이를 기반으로 많은 프로젝트를 개발한 경험이 있습니다.
 생각나는 아이디어를 프로그램으로 구현하기 위해서 앞으로 더욱 노력하는 개발자가 되고 싶습니다.</p>
        
@@ -101,6 +101,7 @@
                     자료구조와 알고리즘 및 풀이 전략에 관하여 공부하며 국제대회인 ACM-ICPC를 준비하였습니다. 
 백준저지사이트와 Codeforces를 기반으로 학습하며 서로의 풀이방법을 공유하고 발표하며 알고리즘 문제풀이의 다양성을 배웠습니다. 
                 </p>
+                <a href="http://alps.jbnu.ac.kr/">JBNU ALPS PAGE</a>
             </div>
 
             <div data-date="July 2018 – Feburary 2020">
@@ -111,17 +112,14 @@
 또한 Jdevops팀에 속하여 Openstack기반의 교내 클라우드(jclould)를 개발 및 운영을 하였습니다. 
 
                 </p>
-                 <a href="http://oslab.jbnu.ac.kr/">Operating Systems Laboratory</a>
+                 <a href="http://oslab.jbnu.ac.kr/">JBNU OSLAB PAGE</a>
             </div> 
 
-            <div data-date="September 2015 – September 2016">
+            <div data-date="March 2019 – August 2019">
                 <h3>Like Lion</h3>
                 <h4>mentee</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur
-                    in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec
-                    nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur
-                    libero. Morbi dapibus porta quam laoreet placerat.
+                   Python django를 기반으로 웹사이트를 제작하였습니다. 웹사이트의 전반적인 이해와 협업 방식을 배웠습니다.
                 </p>
             </div>
         </div>
