--- a/index.html
+++ b/index.html
@@ -129,22 +129,17 @@
     <div id="education">
         <h2 class="heading">Education</h2>
         <div class="education-block">
-            <h3>Gwang Deok High School</h3>
+            <h3>GwangDeok High School</h3>
             <span class="education-date">Mar 2013 - Feb 2016</span>
             <h4>Natural Sciences</h4>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in
-                iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla
-                commodo malesuada sit amet vel lacus. Fusce eget efficitur libero.
-                Morbi dapibus porta quam laoreet placerat.
+            
             </p>
             <ul>
                 <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    교내 수학 경시대회(금상)-2015.08(광덕고 교장)
                 </li>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
+             
             </ul>
         </div>
         <!-- End .education-block -->
