--- a/index.html
+++ b/index.html
@@ -120,7 +120,9 @@
                 <h4>mentee</h4>
                 <p>
                    Python django를 기반으로 웹사이트를 제작하였습니다. 웹사이트의 전반적인 이해와 협업 방식을 배웠습니다.
-                </p>
+                </p> 
+                <a href="https://likelion.net/">LIKELION PAGE</a>
+           
             </div>
         </div>
     </div>
@@ -130,7 +132,7 @@
         <h2 class="heading">Education</h2>
         <div class="education-block">
             <h3>GwangDeok High School</h3>
-            <span class="education-date">Mar 2013 - Feb 2016</span>
+            <span class="education-date">Mar 2013 - Feb 2015</span>
             <h4>Natural Sciences</h4>
             <p>
             
@@ -201,7 +203,7 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>Jclould</h3>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                             Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut
@@ -221,7 +223,7 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>Smart restaurang prototype</h3>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                             Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut
