--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Jclould</h3>
+                        <h3>Unity기반으로 개발한 레이싱러너게임 : BooRoong</h3>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                             Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut
@@ -223,7 +223,7 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Smart restaurang prototype</h3>
+                        <h3>Openstack기반의 클라우딩 시스템 Jclould</h3>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                             Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut
@@ -236,6 +236,27 @@
                     <!-- End .project-info -->
                 </div>
                 <!-- End .project -->
+
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/project.jpg" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Smart Restaurant Prototype</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut
+                            tortor nec nulla commodo malesuada sit amet vel lacus. Fusce
+                            eget efficitur libero. Morbi dapibus porta quam laoreet
+                            placerat.
+                        </p>
+                        <a href="#">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+           
             </div>
         </div>
     </div>
