--- a/index.html
+++ b/index.html
@@ -203,15 +203,11 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Unity기반으로 개발한 레이싱러너게임 : BooRoong</h3>
+                        <h3>BooRoong</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut
-                            tortor nec nulla commodo malesuada sit amet vel lacus. Fusce
-                            eget efficitur libero. Morbi dapibus porta quam laoreet
-                            placerat.
+                            Unity 기반으로 제작한 2인용 레이싱러너 게임입니다.
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="https://github.com/juyongseong/unity-3d-car-runner---Police-and-thief">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -223,15 +219,11 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Openstack기반의 클라우딩 시스템 Jclould</h3>
+                        <h3>Jclould</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut
-                            tortor nec nulla commodo malesuada sit amet vel lacus. Fusce
-                            eget efficitur libero. Morbi dapibus porta quam laoreet
-                            placerat.
+                            Openstack 기반으로 개발한 클라우딩시스템입니다. 컴퓨팅시스템과 Web IDE서비스를 제공하고 전북대학교 학생들에게 교육용 또는 연구용으로 제공하고 있습니다.
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="https://jcloud-devops.github.io/">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -243,13 +235,25 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Smart Restaurant Prototype</h3>
+                        <h3> Unmanned Logistics Warehouse System Using AI and IoT </h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut
-                            tortor nec nulla commodo malesuada sit amet vel lacus. Fusce
-                            eget efficitur libero. Morbi dapibus porta quam laoreet
-                            placerat.
+                            Adoxx라는 메타모델링 도구를 사용하여 CPS를 적용하여 개발하였습니다. 사용한 기술로는 딥러닝, 음성인식 등이 있습니다.
+                        </p>
+                        <a href="https://github.com/juyongseong/IOT-with-metamodeling-and-raspberry-and-aruino">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/project.jpg" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Project Lightweight vHost</h3>
+                        <p>
+                            cpu에 따른 가상 네크워크 성능에서 문제점을 파악하여 vHost 주기적 폴링 기법을 사용하여 host pc의 cpu 사용량을 낮추고 guest pc의 네트워크 성능을 향상시켰습니다. 
                         </p>
                         <a href="#">View Project</a>
                     </div>
@@ -257,6 +261,22 @@
                 </div>
                 <!-- End .project -->
            
+              <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/project.jpg" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Integrated Fine dust Management System </h3>
+                        <p>
+                            빅데이터와 IoT를 사용하여 전주시의 미세먼지 예측 및 분석을 진행하고 실내 미세먼지 정화를 위한 Smart Plant를 제작하였습니다. 
+                        </p> 
+                        <a href="https://github.com/juyongseong/capstone">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+
             </div>
         </div>
     </div>
