--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                         <p>
                             cpu에 따른 가상 네크워크 성능에서 문제점을 파악하여 vHost 주기적 폴링 기법을 사용하여 host pc의 cpu 사용량을 낮추고 guest pc의 네트워크 성능을 향상시켰습니다. 
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="https://juyongseong.github.io/404.html">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
