--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/booroong.png" />
+                        <img src="images/booroong.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
