--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images/jcloud.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -231,13 +231,13 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images/cnn.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
                         <h3> Unmanned Logistics Warehouse System Using AI and IoT </h3>
                         <p>
-                            Adoxx라는 메타모델링 도구를 사용하여 CPS를 적용하여 개발하였습니다. 사용한 기술로는 딥러닝, 음성인식 등이 있습니다.
+                            메타모델링 도구인 Adoxx를 사용하여 CPS를 개발하였습니다. 사용한 기술로는 딥러닝, 음성인식 등이 있습니다.
                         </p>
                         <a href="https://github.com/juyongseong/IOT-with-metamodeling-and-raspberry-and-aruino">View Project</a>
                     </div>
