--- a/index.html
+++ b/index.html
@@ -326,6 +326,7 @@
 
     <div id="contact">
         <h2 href="mailto:wndyd9557@gmail.com">Email Me</h2>
+        <a href="mailto:wndyd9557@gmail.com" class="btn-rounded-white">Email Me</a>
         <!-- <div id="contact-form">
             <form method="POST" action="https://formspree.io/wndyd9557@gmail.com">
                 <input type="hidden" name="_subject" value="Contact request from personal website" />
