--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
     <!-- End #skills -->
 
     <div id="contact">
-        <h2 href="mailto:wndyd9557@gmail.com">Email Me</h2>
+        <!--<h2>Email Me</h2>-->
         <a href="mailto:wndyd9557@gmail.com" class="btn-rounded-white">Email Me</a>
         <!-- <div id="contact-form">
             <form method="POST" action="https://formspree.io/wndyd9557@gmail.com">
