--- a/index.html
+++ b/index.html
@@ -82,8 +82,9 @@
                     <h4>노력하는 개발자</h4>
                     <p> 안녕하세요. 노력하는 개발자 성주용입니다.
 어릴때 부터 수학자체에 재미를 느끼며 순수수학과 많은 시간을 보냈습니다.
-대학에 진학하며 수학과 비슷한 알고리즘의 매력에 빠져들어 알고리즘 문제풀이에 집중하였고 이를 기반으로 많은 프로젝트를 개발한 경험이 있습니다.
-생각나는 아이디어를 프로그램으로 구현하기 위해서 앞으로 더욱 노력하는 개발자가 되고 싶습니다.</p>
+대학진학을 고민하여 수학과 비슷한 코딩에 매력을 느끼게 되었고, 대학에서는 알고리즘, 웹, 운영체제에 관심을 가지게 되었습니다.
+아이디어를 프로그램으로 바꾸기 위해서는 많은 지식과 노력이 필요하다고 생각합니다. 현실과 타협하여 프로그램을 제작하는 것이 아닌 실제 사용자의 입장에서 생각해보며 
+실용적인 프로그램을 만드는 것이 목표입니다.</p>
        
                 </div>
             </div>
