--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
         <div class="education-block">
             <h3>Army</h3>
             <span class="education-date">Mar 2020 - Jun 2022</span>
-            <h4>8962-3 Communication</h4>
+            <h4>통신소대장</h4>
             <p>
             
             </p>
