--- a/index.html
+++ b/index.html
@@ -126,6 +126,15 @@
                 <a href="https://likelion.net/">LIKELION PAGE</a>
            
             </div>
+            <div data-date="July 2022 –">
+                <h3>KoreaInvestment</h3>
+                <h4>BIZ개발2부</h4>
+                <p>
+                   AICC 구축 및 운영
+                </p> 
+                <a href="http://securities.koreainvestment.com/main/Main.jsp">LIKELION PAGE</a>
+           
+            </div>
         </div>
     </div>
     <!-- End #experience -->
