--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 <p>
                    AICC 구축 및 운영
                 </p> 
-                <a href="http://securities.koreainvestment.com/main/Main.jsp">LIKELION PAGE</a>
+                <a href="http://securities.koreainvestment.com/main/Main.jsp">KoreaInvestment PAGE</a>
            
             </div>
         </div>
