--- a/index.html
+++ b/index.html
@@ -126,11 +126,11 @@
                 <a href="https://likelion.net/">LIKELION PAGE</a>
            
             </div>
-            <div data-date="July 2022 –">
-                <h3>KoreaInvestment</h3>
-                <h4>BIZ개발2부</h4>
+            <div data-date="July 2022 – now">
+                <h3>KoreaInvestment IT Headquarters</h3>
+                <h4></h4>
                 <p>
-                   AICC 구축 및 운영
+                   고객에게 당사 금융과 일상사이의 거리를 좁히기 위해 금융과 IT를 배우고 있습니다.
                 </p> 
                 <a href="http://securities.koreainvestment.com/main/Main.jsp">KoreaInvestment PAGE</a>
            
