--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 <h3>KoreaInvestment IT Headquarters</h3>
                 <h4></h4>
                 <p>
-                   현재 BIZ개발2부에서 직무기초교육과 수습기간을 진행하고 있습니다. 고객에게 편리한 IT서비스를 제공하여 금융과 일상사이의 거리를 좁히기 위해 노력하겠습니다.  
+                   BIZ개발2부에서 직무기초교육과 수습기간을 진행하고 있습니다. 
                 </p> 
                 <a href="http://securities.koreainvestment.com/main/Main.jsp">KoreaInvestment PAGE</a>
            
