--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 <h3>KoreaInvestment IT Headquarters</h3>
                 <h4></h4>
                 <p>
-                   BIZ개발2부에서 IPCC, AICC, 챗봇, TA 등의 업무를 담당하고 있습니다. 
+                   IT인프라부에서 IPCC, AICC, 챗봇 등의 업무를 담당하고 있습니다. 
                 </p> 
                 <a href="http://securities.koreainvestment.com/main/Main.jsp">KoreaInvestment PAGE</a>
            
