--- a/index.html
+++ b/index.html
@@ -409,14 +409,17 @@
                             <a href="https://github.com/" target="_blank"><i class="fa fa-github"
                                     aria-hidden="true"></i></a>
                         </li>
+                        <!--
                         <li>
                             <a href="https://stackoverflow.com/" target="_blank"><i class="fa fa-stack-overflow"
                                     aria-hidden="true"></i></a>
                         </li>
+                        -->
                         <li>
-                            <a href="https://linkedin.com/" target="_blank"><i class="fa fa-linkedin"
+                            <a href="https://www.linkedin.com/in/juyongseong/" target="_blank"><i class="fa fa-linkedin"
                                     aria-hidden="true"></i></a>
                         </li>
+                        <!--
                         <li>
                             <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook"
                                     aria-hidden="true"></i></a>
@@ -429,6 +432,7 @@
                             <a href="https://plus.google.com/" target="_blank"><i class="fa fa-google-plus"
                                     aria-hidden="true"></i></a>
                         </li>
+                        -->
                     </ul>
                 </div>
             </div>
