--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                   학부연구생으로 운영체제와 클라우드에 관하여 공부하였으며, Openstack기반의 교내 클라우드를 운영 및 개발하였습니다. 
                   연구로는 KVM과 Cloud Computing에 쓰이는 Network Virtualization를 연구 했으며, vHost의 polling 주기에 따른 네트워크 성능 향상을 주제로 논문을 작성했습니다.
                 </p>
-                 <a href="http://oslab.jbnu.ac.kr/">JBNU OSLAB PAGE</a>
+                 <a href="https://oslab.jbnu.ac.kr/">JBNU OSLAB PAGE</a>
             </div> 
             
             <div data-date="September 2016 – June 2019">
