--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
                         <h3>NetAP: Adaptive Polling Technique for Network Packet Processing in Virtualized Environments</h3>
                         <p>
                             Applied Sciences, vol. 10, no. 15, 5219, 2020
-(doi: 10.3390/app10155219, SCI Indexed, IF: 2.474, Category rank: 33.47% in JCR 2020)
+                            <br>(doi: 10.3390/app10155219, SCI Indexed, IF: 2.474, Category rank: 33.47% in JCR 2020)
                         </p> 
                         <a href="https://www.mdpi.com/2076-3417/10/15/5219">View Project</a>
                     </div>
