--- a/index.html
+++ b/index.html
@@ -348,6 +348,8 @@
                         <p>
                             Applied Sciences, vol. 10, no. 15, 5219, 2020
                             <br>(doi: 10.3390/app10155219, SCI Indexed, IF: 2.474, Category rank: 33.47% in JCR 2020)
+                            <br>
+                            <br>클라우드 컴퓨팅 환경에서 사용되는 가상화 네트워크의 성능 향상 연구
                         </p> 
                         <a href="https://www.mdpi.com/2076-3417/10/15/5219">View Project</a>
                     </div>
