--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <h3>KoreaInvestment IT Headquarters</h3>
                 <h4></h4>
                 <p>
-                   IPCC, AICC, 챗봇 등의 업무를 담당했으며, 현재는 랩자산운용시스템에 대해서 개발 및 운영하고 있습니다. 
+                   증권사 계정계(랩어카운트) 운영 및 개발을 하고 있습니다.
                 </p> 
                 <a href="http://securities.koreainvestment.com/main/Main.jsp">KoreaInvestment PAGE</a>
            
